# rfmt

./: .dockerignore  .envrc  .gitignore  .kenshin.yml  .lefthook.yml  .rfmt.yml  .rubocop.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  RELEASE.ja.md  RELEASE.md  Rakefile  end_block_comment_positioning_test.rb  flake.nix  general_comment_positioning_test.rb  kenshin.gemspec  rfmt.gemspec  test.rb
ext/kenshin/: Cargo.toml  Makefile  extconf.rb
ext/kenshin/src/: lib.rs  validation.rs
ext/kenshin/src/ast/: mod.rs
ext/kenshin/src/config/: mod.rs
ext/kenshin/src/doc/: builders.rs  mod.rs  printer.rs
ext/kenshin/src/error/: mod.rs
ext/kenshin/src/format/: mod.rs  registry.rs  rule.rs
ext/kenshin/src/format/rules/: body_end.rs  case.rs  class.rs  if_unless.rs  loops.rs  variable_write.rs
ext/kenshin/src/logging/: logger.rs  mod.rs
ext/kenshin/src/parser/: mod.rs  native_adapter.rs  prism_adapter.rs
ext/kenshin/src/policy/: mod.rs  validation.rs
ext/kenshin/tests/: native_parity.rs
ext/kenshin/tests/fixtures/parity/: comments_mixed.json  comments_mixed.rb  constructs.json  constructs.rb  embdoc.json  embdoc.rb  heredoc_assign.json  heredoc_call_args.json  heredoc_call_args.rb  metadata_classes.json  metadata_classes.rb  metadata_conditionals.rb  multibyte.json  multibyte.rb  numeric.json  numeric.rb  plain.rb
ext/rfmt/: Cargo.toml  Makefile  extconf.rb
ext/rfmt/spec/: config_spec.rb  spec_helper.rb
ext/rfmt/src/: error.rs  lib.rs  validation.rs
ext/rfmt/src/ast/: mod.rs
ext/rfmt/src/config/: mod.rs
ext/rfmt/src/debug/: macros.rs  mod.rs
ext/rfmt/src/doc/: builders.rs  mod.rs  printer.rs
ext/rfmt/src/emitter/: mod.rs
ext/rfmt/src/emitter/snapshots/: rfmt__emitter__snapshot_tests__snapshot_case_when.snap  rfmt__emitter__snapshot_tests__snapshot_class_with_superclass.snap  rfmt__emitter__snapshot_tests__snapshot_if_statement.snap  rfmt__emitter__snapshot_tests__snapshot_method_with_params.snap  rfmt__emitter__snapshot_tests__snapshot_simple_class.snap  rfmt__emitter__snapshot_tests__snapshot_simple_method.snap  rfmt__emitter__snapshot_tests__snapshot_simple_module.snap  (+1 more)
ext/rfmt/src/error/: context.rs  handler.rs  mod.rs
ext/rfmt/src/format/: context.rs  formatter.rs  mod.rs  registry.rs  rule.rs
ext/rfmt/src/format/rules/: begin.rs  call.rs  (+11 more)
ext/rfmt/src/logging/: logger.rs  mod.rs
ext/rfmt/src/parser/: native_adapter.rs  prism_adapter.rs
ext/rfmt/src/policy/: limits.rs  mod.rs  validation.rs
ext/rfmt/tests/: native_parity.rs  ruby_prism_smoke.rs
(+183 files in other folders)
