# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/kenshin"]
resolver = "2"

# panic = "abort" must not be set here: magnus relies on unwinding to convert
# Rust panics into Ruby exceptions instead of killing the host process.
[profile.release]
lto = "thin"
codegen-units = 1
