[package]
name = "kenshin"
version = "1.7.0"
edition = "2021"
authors = ["fujitani sora <fujitanisora0414@gmail.com>"]
license = "MIT"
publish = false

[lib]
name = "kenshin"
# rlib in addition to cdylib so integration tests (tests/) can link the crate
crate-type = ["cdylib", "rlib"]
# The doc examples are illustrative and were never compiled while the crate
# was cdylib-only; keep them out of the test suite
doctest = false

[dependencies]
# Ruby FFI
magnus = { version = "0.8.2" }
rb-sys = "0.9.124"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"

# Logging
# "std" was previously enabled transitively via env_logger; set_boxed_logger needs it
log = { version = "0.4", features = ["std"] }

# Configuration
dirs = "5.0"
globset = "0.4"
ruby-prism = "1.9"

[dev-dependencies]
tempfile = "3.8"

# Note: Benchmarks are included as part of the test suite due to Ruby FFI linking constraints.
# Run performance tests with: cargo test --release perf_
