[package]
name = "rfmt"
version = "1.4.1"
edition = "2021"
authors = ["fujitani sora <fujitanisora0414@gmail.com>"]
license = "MIT"
publish = false

[lib]
name = "rfmt"
crate-type = ["cdylib"]

[dependencies]
# Ruby FFI
magnus = { version = "0.8.2" }
rb-sys = "0.9.124"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallel processing
rayon = "1.8"

# Caching
lru = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
config = "0.14"
toml = "0.8"
dirs = "5.0"
globset = "0.4"

# Security and resource management
num_cpus = "1.16"

# CLI (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
# Testing
proptest = "1.4"
insta = "1.34"
criterion = "0.5"
tempfile = "3.8"

[features]
default = ["cli"]
cli = ["clap"]
